
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int win; int display; } ;
typedef TYPE_1__ XDataStr ;
typedef scalar_t__ Status ;


 int CurrentTime ;
 int False ;
 int GrabModeAsync ;
 scalar_t__ GrabSuccess ;
 scalar_t__ XGrabKeyboard (int ,int ,int ,int ,int ,int ) ;
 int XMapWindow (int ,int ) ;
 int printf (char*,scalar_t__) ;

void
show(XDataStr *data)
{
    Status s;

    XMapWindow(data->display, data->win);
    s = XGrabKeyboard(data->display, data->win, False,
            GrabModeAsync, GrabModeAsync, CurrentTime);
    if (s != GrabSuccess) {
        printf("Error grabing kbd %d\n", s);
    }
}
