; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_2581.c_show.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_2581.c_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@False = common dso_local global i32 0, align 4
@GrabModeAsync = common dso_local global i32 0, align 4
@CurrentTime = common dso_local global i32 0, align 4
@GrabSuccess = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"Error grabing kbd %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @show(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @XMapWindow(i32 %6, i32 %9)
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @False, align 4
  %18 = load i32, i32* @GrabModeAsync, align 4
  %19 = load i32, i32* @GrabModeAsync, align 4
  %20 = load i32, i32* @CurrentTime, align 4
  %21 = call i64 @XGrabKeyboard(i32 %13, i32 %16, i32 %17, i32 %18, i32 %19, i32 %20)
  store i64 %21, i64* %3, align 8
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* @GrabSuccess, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %1
  %26 = load i64, i64* %3, align 8
  %27 = call i32 @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %26)
  br label %28

28:                                               ; preds = %25, %1
  ret void
}

declare dso_local i32 @XMapWindow(i32, i32) #1

declare dso_local i64 @XGrabKeyboard(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
